SUBMARINE-597. Support for SSH based git sync mode
### What is this PR for?
Clone the source code from git repository using SSH based access. /code dir is the location to store the source code. SSH based access requires SSH host private key and known hosts to be passed through /etc/secret to K8 git sync init container process.

### What type of PR is it?
Improvement

### Todos
* [ ] - Task

### How should this be tested?
* First time? Setup Travis CI as described on https://submarine.apache.org/contribution/contributions.html#continuous-integration
* Strongly recommended: add automated unit tests for any new or changed behavior
* Outline any manual steps to test the PR here.

### Screenshots (if appropriate)

### Questions:
* Does the licenses files need update? Yes/No
* Is there breaking changes for older versions? Yes/No
* Does this needs documentation? Yes/No

Author: Manikandan R <manirajv06@gmail.com>

Closes #391 from manirajv06/SUBMARINE-597 and squashes the following commits:

162950c [Manikandan R] Fixed review comments (continuation of previous commit)
b29cc79 [Manikandan R] Fixed review comments
88d3f77 [Manikandan R] Fixed checkstyle issues
1ba4064 [Manikandan R] SUBMARINE-597: Support for "ssh" based git sync mode